--- a/expander/circuits/withdraw_rs/Cargo.toml
+++ b/expander/circuits/withdraw_rs/Cargo.toml
@@ -5,10 +5,10 @@ edition = "2021"
 
 [dependencies]
 bindgen = "0.71.1"
-expander_config = { git = "https://github.com/PolyhedraZK/Expander", branch = "dev", package = "config" }
-gkr = { git = "https://github.com/PolyhedraZK/Expander", branch = "dev" }
-mpi_config = { git = "https://github.com/PolyhedraZK/Expander", branch = "dev" }
-expander_compiler = { git = "https://github.com/PolyhedraZK/ExpanderCompilerCollection", branch = "dev" }
+expander_config = { git = "https://github.com/PolyhedraZK/Expander", branch = "main", package = "config" }
+gkr = { git = "https://github.com/PolyhedraZK/Expander", branch = "main" }
+mpi_config = { git = "https://github.com/PolyhedraZK/Expander", branch = "main" }
+expander_compiler = { git = "https://github.com/lean-apple/ExpanderCompilerCollection", branch = "master" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 num-bigint = "0.4"
